--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = localhost; User Id = SA; PWD = mutafakir111@; Database = sqlserver;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
