--- a/hospital.csproj
+++ b/hospital.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.sqlserver" Version="6.0.1" />
     <PackageReference Include="MudBlazor" Version="6.0.5" />
   </ItemGroup>
 
